Correct error and add content for pomodoro project

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,14 +14,14 @@
             <header class="major">
                 <h2>A propos de moi</h2>
                 <p>Anciennement dans le domaine de la qualité, j'ai décidé en 2020 de me reconvertir dans le domaine du
-                    développement, et plus précisement dans le domaine du développement web. Apres avoir passé 1 an en
+                    développement et plus précisément dans le domaine du développement web. Après avoir passé un an en
                     autodidacte, j'ai décidé de suivre une formation intensive à <a
                         href="https://oclock.io/">O'clock</a>, afin de valider mes
                     competences et corriger mes mauvaises pratiques. Parallelement a cette formation, j'ai également
-                    effectué des projets personnels pour solidifier mes competences.</p>
-                <p>Durant mon année en autodidacte, j'ai eu une enorme préférence pour le coté Back-end du développement
-                    web, préférence qui n'a cessé d'accroitre lors de mon apprentissage de Symfony. Il etait donc
-                    evident pour moi de me spécialiser dans le coté back. Cependant, j'essaye également de m'interesser
+                    effectué des projets personnels pour solidifier mes compétences.</p>
+                <p>Durant mon année en autodidacte, j'ai eu une énorme préférence pour le coté Back-end du développement
+                    web, préférence qui n'a cessé d'accroitre lors de mon apprentissage de Symfony. Il était donc
+                    évident pour moi de me spécialiser dans le coté back. Cependant, j'essaye également de m'intéresser
                     aux technologies Front-End, comme React et Vue.js.</p>
                 <div style="display:flex;justify-content: center;margin-bottom: 30px;">
                     <a target="_blank" style="text-decoration:none;display:block;background-color:rgb(0, 0, 0,0.7);padding: 15px;border-radius: 15px;width:180px;font-weight: bold;"
@@ -86,7 +86,7 @@
             <div class="content">
                 <h2>Quiver</h2>
                 <span> En cours </span>
-                <p>Clone de Quora, un réseau social-forum pour poser et repondre à des questions.</p>
+                <p>Clone de Quora, un forum pour poser et repondre à des questions.</p>
                 <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
 
                     <li class="language">
