Fix bug for displaying technologies for reach projects and add content for school experiences

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,12 +24,14 @@
                     évident pour moi de me spécialiser dans le coté back. Cependant, j'essaye également de m'intéresser
                     aux technologies Front-End, comme React et Vue.js.</p>
                 <div style="display:flex;justify-content: center;margin-bottom: 30px;">
-                    <a target="_blank" style="text-decoration:none;display:block;background-color:rgb(0, 0, 0,0.7);padding: 15px;border-radius: 15px;width:180px;font-weight: bold;"
+                    <a target="_blank"
+                        style="text-decoration:none;display:block;background-color:rgb(0, 0, 0,0.7);padding: 15px;border-radius: 15px;width:180px;font-weight: bold;"
                         href="/assets/docs/CV_Alexandre_RAVICHANDRAN_Back_End.pdf">Voir mon
                         CV</a>
                 </div>
                 <ul class="icons">
-                    <li><a target="_blank" style="font-size: 50px;" href="https://www.linkedin.com/in/alexandre-ravichandran-246743142"
+                    <li><a target="_blank" style="font-size: 50px;"
+                            href="https://www.linkedin.com/in/alexandre-ravichandran-246743142"
                             class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
                     <li><a target="_blank" style="font-size: 50px;" href="https://github.com/AlexandreRavichandran"
                             class="icon brands fa-github"><span class="label">Github</span></a></li>
@@ -242,6 +244,15 @@
                         </div>
                     </div>
                 </li>
+                <li class="icon solid fa-check-circle">
+                    <h3>Autres</h3>
+                    <div style="display:flex;flex-wrap: wrap;justify-content: center;">
+                        <div class="language">
+                            <img src="/assets/css/images/languages/toeic.svg" alt="">
+                            <p>Toeic: Score de 965 (2021)</p>
+                        </div>
+                    </div>
+                </li>
             </ul>
         </div>
     </section>
@@ -250,7 +261,26 @@
             <header class="major">
                 <h2>Parcours</h2>
             </header>
-            
+            <h3> Juin 2021 - Novembre 2021 </h3>
+            <p>Développeur Web à l'ecole O'clock - <span style="font-weight: bold;">spécialisation Symfony</span></p>
+
+            <ul>
+                Lister ce qu'on a appris en cours
+            </ul>
+            <h3>Juillet 2020 - Juin 2021 </h3>
+            <p>Apprentissage du développement Web en autodidacte</p>
+            <p>Réalisation du MOOC de l'ANSSI : Initialisation à la cybersécurité & protection des outils numériques (<a
+                    target="_blank"
+                    href="/assets/docs/attestation_secnumacademie_Alexandre_RAVICHANDRAN.pdf">attestation</a>)</p>
+            <ul>
+                Lister ce que j'ai appris tout seul
+            </ul>
+            <h3>Septembre 2018 - Septembre 2019 </h3>
+            <p>Master 2 Genie Industriel</p>
+            <ul>
+                Lister ce que j'ai appris
+            </ul>
+
         </div>
     </section>
 
