Add Content for school experiences

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -261,26 +261,86 @@
             <header class="major">
                 <h2>Parcours</h2>
             </header>
-            <h3> Juin 2021 - Novembre 2021 </h3>
-            <p>Développeur Web à l'ecole O'clock - <span style="font-weight: bold;">spécialisation Symfony</span></p>
-
-            <ul>
-                Lister ce qu'on a appris en cours
-            </ul>
-            <h3>Juillet 2020 - Juin 2021 </h3>
-            <p>Apprentissage du développement Web en autodidacte</p>
-            <p>Réalisation du MOOC de l'ANSSI : Initialisation à la cybersécurité & protection des outils numériques (<a
-                    target="_blank"
-                    href="/assets/docs/attestation_secnumacademie_Alexandre_RAVICHANDRAN.pdf">attestation</a>)</p>
-            <ul>
-                Lister ce que j'ai appris tout seul
-            </ul>
-            <h3>Septembre 2018 - Septembre 2019 </h3>
-            <p>Master 2 Genie Industriel</p>
-            <ul>
-                Lister ce que j'ai appris
-            </ul>
-
+            <div style="display:flex;justify-content: space-between;">
+                <div>
+                    <h5 style="margin-bottom: 0;">Ecole O'clock
+                    </h5>
+                </div>
+                <div>
+                    <h5>Juin 2021 - Novembre 2021 </h5>
+                </div>
+            </div>
+            <p style="font-weight:bold;margin-bottom: 0;">Formation intensive en Développement Web et Web Mobile</p>
+            <p style="font-weight:bold;">Spécialisation Symfony</p>
+            <div
+                style="display:flex;justify-content: space-around;text-align: left;flex-wrap: wrap;margin-bottom: 20px;">
+                <ul>
+                    <h5>Front-End</h5>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Javascript</li>
+                    <li>Framework Bootstrap</li>
+                    <li>Framework Bulma</li>
+                </ul>
+                <ul>
+                    <h5>Back-End</h5>
+                    <li>PHP</li>
+                    <li>Architecture MVC</li>
+                    <li>Mise en place d'un CRUD</li>
+                    <li>Création/Utilisation d'une API</li>
+                    <li>Framework Lumen</li>
+                    <li style="font-weight: bold;">Spécialisation Symfony</li>
+                </ul>
+                <ul>
+                    <h5>Gestion de projet</h5>
+                    <li>Méthode Agile</li>
+                </ul>
+            </div>
+            <hr>
+            <div style="display:flex;justify-content: space-between;">
+                <div>
+                    <h5 style="margin-bottom: 0;">Autodidacte
+                    </h5>
+                </div>
+                <div>
+                    <h5>Juillet 2020 - juin 2021 </h5>
+                </div>
+            </div>
+            <p style="font-weight:bold;">Apprentissage du développement Web en autodidacte</p>
+            <div
+                style="display:flex;justify-content: center;flex-direction: column;text-align: center;margin-bottom: 20px;">
+                <ul style="display:flex;align-items: center;flex-direction: column;text-align: left;">
+                    <h5>Apprentissage via differents cours en ligne</h5>
+                    <li>OpenClassrooms</li>
+                    <li>FreeCodeCamp</li>
+                </ul>
+                <p>Apprentissage des notions de Symfony, Docker et Jekyll</p>
+                <p>Mise en pratique avec des réalisations de projets personnels</p>
+                <p>Réalisation du MOOC de l'ANSSI : Initialisation à la cybersécurité & protection des outils numériques
+                    (<a target="_blank"
+                        href="/assets/docs/attestation_secnumacademie_Alexandre_RAVICHANDRAN.pdf">attestation</a>)</p>
+            </div>
+            <hr>
+            <div style="display:flex;justify-content: space-between;">
+                <div>
+                    <h5 style="margin-bottom: 0;">Université Paris Est Marne la Vallée
+                    </h5>
+                </div>
+                <div>
+                    <h5>Septembre 2018 - Septembre 2019 </h5>
+                </div>
+            </div>
+            <p style="font-weight:bold;">Master 2 Génie industriel</p>
+            <div
+                style="display:flex;justify-content: center;flex-direction: column;text-align: center;margin-bottom: 20px;">
+                <ul style="display:flex;align-items: center;flex-direction: column;text-align: left;">
+                    <h5>Apprentissage de techniques de gestion de projet</h5>
+                    <li>Pilotage/Gestion d'un projet</li>
+                    <li>Méthodes/outils de résolutions de problèmes</li>
+                    <li>Animation des réunions d'avancement d'un projet</li>
+                    <li>Rédactions de comptes rendus de réunions</li>
+                </ul>
+            </div>
         </div>
     </section>
 
