Change font color for home page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,13 +13,14 @@
         <div class="inner">
             <header class="major">
                 <h2>A propos de moi</h2>
-                <p>Anciennement dans le domaine de la qualité, j'ai décidé en 2020 de me reconvertir dans le domaine du
+                <p style="color:white">Anciennement dans le domaine de la qualité, j'ai décidé en 2020 de me reconvertir
+                    dans le domaine du
                     développement et plus précisément dans le domaine du développement web. Après avoir passé un an en
                     autodidacte, j'ai décidé de suivre une formation intensive à <a
                         href="https://oclock.io/">O'clock</a>, afin de valider mes
                     competences et corriger mes mauvaises pratiques. Parallelement a cette formation, j'ai également
                     effectué des projets personnels pour solidifier mes compétences.</p>
-                <p>Durant mon année en autodidacte, j'ai eu une énorme préférence pour le coté Back-end du développement
+                <p style="color:white">Durant mon année en autodidacte, j'ai eu une énorme préférence pour le coté Back-end du développement
                     web, préférence qui n'a cessé d'accroitre lors de mon apprentissage de Symfony. Il était donc
                     évident pour moi de me spécialiser dans le coté back. Cependant, j'essaye également de m'intéresser
                     aux technologies Front-End, comme React et Vue.js.</p>
@@ -256,7 +257,7 @@
             </ul>
         </div>
     </section>
-    <section id="four" class="wrapper style1 special">
+    <section id="four" class="wrapper style1 special" style="color:white">
         <div class="inner">
             <header class="major">
                 <h2>Parcours</h2>
