fix font color bug

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,8 @@
                         href="https://oclock.io/">O'clock</a>, afin de valider mes
                     competences et corriger mes mauvaises pratiques. Parallelement a cette formation, j'ai également
                     effectué des projets personnels pour solidifier mes compétences.</p>
-                <p style="color:white">Durant mon année en autodidacte, j'ai eu une énorme préférence pour le coté Back-end du développement
+                <p style="color:white">Durant mon année en autodidacte, j'ai eu une énorme préférence pour le coté
+                    Back-end du développement
                     web, préférence qui n'a cessé d'accroitre lors de mon apprentissage de Symfony. Il était donc
                     évident pour moi de me spécialiser dans le coté back. Cependant, j'essaye également de m'intéresser
                     aux technologies Front-End, comme React et Vue.js.</p>
@@ -275,7 +276,7 @@
             <p style="font-weight:bold;">Spécialisation Symfony</p>
             <div
                 style="display:flex;justify-content: space-around;text-align: left;flex-wrap: wrap;margin-bottom: 20px;">
-                <ul>
+                <ul style="color:white">
                     <h5>Front-End</h5>
                     <li>HTML</li>
                     <li>CSS</li>
@@ -283,7 +284,7 @@
                     <li>Framework Bootstrap</li>
                     <li>Framework Bulma</li>
                 </ul>
-                <ul>
+                <ul style="color:white">
                     <h5>Back-End</h5>
                     <li>PHP</li>
                     <li>Architecture MVC</li>
@@ -292,7 +293,7 @@
                     <li>Framework Lumen</li>
                     <li style="font-weight: bold;">Spécialisation Symfony</li>
                 </ul>
-                <ul>
+                <ul style="color:white">
                     <h5>Gestion de projet</h5>
                     <li>Méthode Agile</li>
                 </ul>
@@ -309,8 +310,8 @@
             </div>
             <p style="font-weight:bold;">Apprentissage du développement Web en autodidacte</p>
             <div
-                style="display:flex;justify-content: center;flex-direction: column;text-align: center;margin-bottom: 20px;">
-                <ul style="display:flex;align-items: center;flex-direction: column;text-align: left;">
+                style="display:flex;justify-content: center;flex-direction: column;text-align: center;margin-bottom: 20px;color:white">
+                <ul style="display:flex;align-items: center;flex-direction: column;text-align: left;color:white">
                     <h5>Apprentissage via differents cours en ligne</h5>
                     <li>OpenClassrooms</li>
                     <li>FreeCodeCamp</li>
@@ -334,7 +335,7 @@
             <p style="font-weight:bold;">Master 2 Génie industriel</p>
             <div
                 style="display:flex;justify-content: center;flex-direction: column;text-align: center;margin-bottom: 20px;">
-                <ul style="display:flex;align-items: center;flex-direction: column;text-align: left;">
+                <ul style="display:flex;align-items: center;flex-direction: column;text-align: left;color:white">
                     <h5>Apprentissage de techniques de gestion de projet</h5>
                     <li>Pilotage/Gestion d'un projet</li>
                     <li>Méthodes/outils de résolutions de problèmes</li>
