Add contact section

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -345,5 +345,17 @@
             </div>
         </div>
     </section>
+    <section id="cta" class="wrapper style4">
+        <div class="inner">
+            <header style="padding-right: 0;">
+                <h2 style="margin-bottom: 0;">Me contacter</h2>
+            </header>
+            <ul class="actions stacked" style="width:100%">
+                <li class="fas fa-map-marker-alt"> <a target="_blank" href="https://www.google.fr/maps/place/Bailly-Romainvilliers/@48.8452895,2.8003069,14z/data=!3m1!4b1!4m5!3m4!1s0x47e8a7fb9b29d351:0x1dcafc784af85334!8m2!3d48.847068!4d2.823803">Bailly Romainvilliers</a></li>
+                <li class="icon solid fa-envelope"> <a target="_blank" href="mailto:alexandre.ravichandran@gmail.com">alexandre.ravichandran@gmail.com</a></li>
+                <li class="fas fa-phone-alt"> 0695179977</li>
+            </ul>
+        </div>
+    </section>
 
     {% include footer.html %}
