--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,11 +3,12 @@
 <article id="main">
     <header
         style="background-image: url('/assets/css/images/{{page.image}}-lg.png');background-size: contain;background-position-x: center;background-position-y: center;">
-        <h2>{{page.title}}</h2>
-        <p>{{page.description}}</p>
+
     </header>
     <section class="wrapper style5">
         <div class="inner">
+            <h2 style="color:black;text-align:center">{{page.title}}</h2>
+            <p style="color:black;text-align:center">{{page.description}}</p>
             {{content}}
         </div>
     </section>
