Add section for remind-me project on homepage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -91,7 +91,6 @@
                 <h2>Quiver</h2>
                 <p>Clone de Quora, un forum pour poser et repondre à des questions.</p>
                 <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
-
                     <li class="language">
                         <img src="/assets/css/images/languages/symfony.svg" alt="">
                         <p>Symfony</p>
@@ -115,6 +114,47 @@
                 </ul>
                 <div class="projectLinks">
                     <a target="_blank" href="/quiver">Voir plus</a>
+                </div>
+            </div>
+        </section>
+        <section class="spotlight">
+            <div class="image"><img src="http://placehold.it/748/529" alt="" /></div>
+            <div class="content">
+                <h2>Remind-Me</h2>
+                <p>Application "Pense-bête" pour se constituer une liste de films à voir, livres à lire et musique à
+                    écouter.</p>
+                <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
+                    <li class="language">
+                        <img src="/assets/css/images/languages/symfony.svg" alt="">
+                        <p>Symfony</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/api-platform.svg" alt="">
+                        <p>API Platform</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/jekyll.svg" alt="">
+                        <p>Jekyll</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/bootstrap.svg" alt="">
+                        <p>Bootstrap</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/javascript.svg" alt="">
+                        <p>Javascript</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/mysql.svg" alt="">
+                        <p>MySQL</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/heroku.svg" alt="">
+                        <p>Heroku</p>
+                    </li>
+                </ul>
+                <div class="projectLinks">
+                    <a target="_blank" href="/remind-me">Voir plus</a>
                 </div>
             </div>
         </section>
@@ -199,12 +239,16 @@
                     <h3>Back-end</h3>
                     <div style="display:flex;flex-wrap: wrap;justify-content: center;">
                         <div class="language">
-                            <img src="/assets/css/images/languages/mysql.svg" alt="">
-                            <p>MySQL</p>
-                        </div>
-                        <div class="language">
                             <img src="/assets/css/images/languages/symfony.svg" alt="">
                             <p>Symfony</p>
+                        </div>
+                        <div class="language">
+                            <img src="/assets/css/images/languages/api-platform.svg" alt="">
+                            <p>API-Platform</p>
+                        </div>
+                        <div class="language">
+                            <img src="/assets/css/images/languages/mysql.svg" alt="">
+                            <p>MySQL</p>
                         </div>
                         <div class="language">
                             <img src="/assets/css/images/languages/lumen.svg" alt="">
@@ -350,8 +394,11 @@
                 <h2>Me contacter</h2>
             </header>
             <ul class="actions stacked" style="width:100%">
-                <li class="fas fa-map-marker-alt"> <a target="_blank" href="https://www.google.fr/maps/place/Bailly-Romainvilliers/@48.8452895,2.8003069,14z/data=!3m1!4b1!4m5!3m4!1s0x47e8a7fb9b29d351:0x1dcafc784af85334!8m2!3d48.847068!4d2.823803">Bailly Romainvilliers</a></li>
-                <li class="icon solid fa-envelope"> <a target="_blank" href="mailto:alexandre.ravichandran@gmail.com">alexandre.ravichandran@gmail.com</a></li>
+                <li class="fas fa-map-marker-alt"> <a target="_blank"
+                        href="https://www.google.fr/maps/place/Bailly-Romainvilliers/@48.8452895,2.8003069,14z/data=!3m1!4b1!4m5!3m4!1s0x47e8a7fb9b29d351:0x1dcafc784af85334!8m2!3d48.847068!4d2.823803">Bailly
+                        Romainvilliers</a></li>
+                <li class="icon solid fa-envelope"> <a target="_blank"
+                        href="mailto:alexandre.ravichandran@gmail.com">alexandre.ravichandran@gmail.com</a></li>
                 <li class="fas fa-phone-alt"> 0695179977</li>
             </ul>
         </div>
