fix syntax errors

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,11 +46,54 @@
     <section id="two" class="wrapper alt style2">
         <div style="padding-top: 60px;" class="inner">
             <header style="text-align: center;" class="major">
-                <h2>Portfolio<br /></h2>
+                <h2>Portfolio</h2>
                 <p>Vous trouverez ci-dessous différents projets que j'ai réalisé durant mon apprentissage du
-                    developpement web.</p>
+                    developpement web, et également ceux que je réalise actuellement</p>
             </header>
         </div>
+        <section class="spotlight">
+            <!-- <div class="image"><img src="http://placehold.it/748/529" alt="" /></div> -->
+            <div style="width:748px;height:529px;background-color: black;"></div>
+            <div class="content">
+                <h2>Remind-Me</h2>
+                <h4>Projet en cours</h4>
+                <p>Application "Pense-bête" pour se constituer une liste de films à voir, livres à lire et musique à
+                    écouter.</p>
+                <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
+                    <li class="language">
+                        <img src="/assets/css/images/languages/symfony.svg" alt="">
+                        <p>Symfony</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/api-platform.svg" alt="">
+                        <p>API Platform</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/jekyll.svg" alt="">
+                        <p>Jekyll</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/bootstrap.svg" alt="">
+                        <p>Bootstrap</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/javascript.svg" alt="">
+                        <p>Javascript</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/mysql.svg" alt="">
+                        <p>MySQL</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/heroku.svg" alt="">
+                        <p>Heroku</p>
+                    </li>
+                </ul>
+                <div class="projectLinks">
+                    <a target="_blank" href="/remind-me">Voir plus</a>
+                </div>
+            </div>
+        </section>
         <section class="spotlight">
             <div class="image"><img src="/assets/css/images/spacetrip.png" alt="" /></div>
             <div class="content">
@@ -114,47 +157,6 @@
                 </ul>
                 <div class="projectLinks">
                     <a target="_blank" href="/quiver">Voir plus</a>
-                </div>
-            </div>
-        </section>
-        <section class="spotlight">
-            <div class="image"><img src="http://placehold.it/748/529" alt="" /></div>
-            <div class="content">
-                <h2>Remind-Me</h2>
-                <p>Application "Pense-bête" pour se constituer une liste de films à voir, livres à lire et musique à
-                    écouter.</p>
-                <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
-                    <li class="language">
-                        <img src="/assets/css/images/languages/symfony.svg" alt="">
-                        <p>Symfony</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/api-platform.svg" alt="">
-                        <p>API Platform</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/jekyll.svg" alt="">
-                        <p>Jekyll</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/bootstrap.svg" alt="">
-                        <p>Bootstrap</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/javascript.svg" alt="">
-                        <p>Javascript</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/mysql.svg" alt="">
-                        <p>MySQL</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/heroku.svg" alt="">
-                        <p>Heroku</p>
-                    </li>
-                </ul>
-                <div class="projectLinks">
-                    <a target="_blank" href="/remind-me">Voir plus</a>
                 </div>
             </div>
         </section>
