--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -52,8 +52,33 @@
             </header>
         </div>
         <section class="spotlight">
-            <!-- <div class="image"><img src="http://placehold.it/748/529" alt="" /></div> -->
-            <div style="width:748px;height:529px;background-color: black;"></div>
+            <div class="image"><img width="100%" src="http://placehold.it/748x529" alt="" /></div>
+            <div class="content">
+                <h2>Oldix</h2>
+                <h4>Projet en cours</h4>
+                <p>Application centralisant des films libres de droits et permettant de les visionner</p>
+                <p>Travail uniquement sur le coté back</p>
+                <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
+                    <li class="language">
+                        <img src="/assets/css/images/languages/symfony.svg" alt="">
+                        <p>Symfony</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/mysql.svg" alt="">
+                        <p>MySQL</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/aws.svg" alt="">
+                        <p>AWS</p>
+                    </li>
+                </ul>
+                <div class="projectLinks">
+                    <a target="_blank" href="/oldix">Voir plus</a>
+                </div>
+            </div>
+        </section>
+        <section class="spotlight">
+            <div class="image"><img width="100%" src="http://placehold.it/748x529" alt="" /></div>
             <div class="content">
                 <h2>Remind-Me</h2>
                 <h4>Projet en cours</h4>
@@ -95,41 +120,7 @@
             </div>
         </section>
         <section class="spotlight">
-            <div class="image"><img src="/assets/css/images/spacetrip.png" alt="" /></div>
-            <div class="content">
-                <h2>Spacetrip</h2>
-
-                <p>Agence (fictive) de voyages dans l'espace.</p>
-                <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
-                    <li class="language">
-                        <img src="/assets/css/images/languages/symfony.svg" alt="">
-                        <p>Symfony</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/bootstrap.svg" alt="">
-                        <p>Bootstrap</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/javascript.svg" alt="">
-                        <p>Javascript</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/mysql.svg" alt="">
-                        <p>MySQL</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/heroku.svg" alt="">
-                        <p>Heroku</p>
-                    </li>
-                </ul>
-                <div class="projectLinks">
-                    <a target="_blank" href="/spacetrip">Voir plus</a>
-                </div>
-            </div>
-        </section>
-        <section class="spotlight">
             <div class="image"><img style="display:block" src="/assets/css/images/quiver.png" width="100%" alt=""></div>
-            <!-- 748x529 -->
             <div class="content">
                 <h2>Quiver</h2>
                 <p>Clone de Quora, un forum pour poser et repondre à des questions.</p>
@@ -157,6 +148,38 @@
                 </ul>
                 <div class="projectLinks">
                     <a target="_blank" href="/quiver">Voir plus</a>
+                </div>
+            </div>
+        </section>
+        <section class="spotlight">
+            <div class="image"><img src="/assets/css/images/spacetrip.png" alt="" /></div>
+            <div class="content">
+                <h2>Spacetrip</h2>
+                <p>Agence fictive de voyages dans l'espace.</p>
+                <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
+                    <li class="language">
+                        <img src="/assets/css/images/languages/symfony.svg" alt="">
+                        <p>Symfony</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/bootstrap.svg" alt="">
+                        <p>Bootstrap</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/javascript.svg" alt="">
+                        <p>Javascript</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/mysql.svg" alt="">
+                        <p>MySQL</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/heroku.svg" alt="">
+                        <p>Heroku</p>
+                    </li>
+                </ul>
+                <div class="projectLinks">
+                    <a target="_blank" href="/spacetrip">Voir plus</a>
                 </div>
             </div>
         </section>
