Add info about oldix project and add pictures

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -52,33 +52,7 @@
             </header>
         </div>
         <section class="spotlight">
-            <div class="image"><img width="100%" src="http://placehold.it/748x529" alt="" /></div>
-            <div class="content">
-                <h2>Oldix</h2>
-                <h4>Projet en cours</h4>
-                <p>Application centralisant des films libres de droits et permettant de les visionner</p>
-                <p>Travail uniquement sur le coté back</p>
-                <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
-                    <li class="language">
-                        <img src="/assets/css/images/languages/symfony.svg" alt="">
-                        <p>Symfony</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/mysql.svg" alt="">
-                        <p>MySQL</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/aws.svg" alt="">
-                        <p>AWS</p>
-                    </li>
-                </ul>
-                <div class="projectLinks">
-                    <a target="_blank" href="/oldix">Voir plus</a>
-                </div>
-            </div>
-        </section>
-        <section class="spotlight">
-            <div class="image"><img width="100%" src="http://placehold.it/748x529" alt="" /></div>
+            <div class="image"><img width="100%" src="/assets/css/images/remindme.png" alt="" /></div>
             <div class="content">
                 <h2>Remind-Me</h2>
                 <h4>Projet en cours</h4>
@@ -116,6 +90,32 @@
                 </ul>
                 <div class="projectLinks">
                     <a target="_blank" href="/remind-me">Voir plus</a>
+                </div>
+            </div>
+        </section>
+        <section class="spotlight">
+            <div class="image"><img width="100%" src="/assets/css/images/oldix.png" alt="" /></div>
+            <div class="content">
+                <h2>Oldix</h2>
+                <p>Projet en équipe</p>
+                <p>Application centralisant des films libres de droits et permettant de les visionner</p>
+                <p>Travail uniquement sur le coté back</p>
+                <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
+                    <li class="language">
+                        <img src="/assets/css/images/languages/symfony.svg" alt="">
+                        <p>Symfony</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/mysql.svg" alt="">
+                        <p>MySQL</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/aws.svg" alt="">
+                        <p>AWS</p>
+                    </li>
+                </ul>
+                <div class="projectLinks">
+                    <a target="_blank" href="/oldix">Voir plus</a>
                 </div>
             </div>
         </section>
