--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,17 +14,16 @@
             <header class="major">
                 <h2>A propos de moi</h2>
                 <p style="color:white">Anciennement dans le domaine de la qualité, j'ai décidé en 2020 de me reconvertir
-                    dans le domaine du
-                    développement et plus précisément dans le domaine du développement web. Après avoir passé un an en
+                    dans le domaine du développement et plus précisément dans le domaine du développement web. Après
+                    avoir passé un an en
                     autodidacte, j'ai décidé de suivre une formation intensive à <a
                         href="https://oclock.io/">O'clock</a>, afin de valider mes
-                    competences et corriger mes mauvaises pratiques. Parallelement a cette formation, j'ai également
+                    compétences et corriger mes mauvaises pratiques. Parallèlement à cette formation, j'ai également
                     effectué des projets personnels pour solidifier mes compétences.</p>
-                <p style="color:white">Durant mon année en autodidacte, j'ai eu une énorme préférence pour le coté
-                    Back-end du développement
-                    web, préférence qui n'a cessé d'accroitre lors de mon apprentissage de Symfony. Il était donc
-                    évident pour moi de me spécialiser dans le coté back. Cependant, j'essaye également de m'intéresser
-                    aux technologies Front-End, comme React et Vue.js.</p>
+                <p style="color:white">Durant mon année en autodidacte, j'ai eu une énorme préférence pour le côté
+                    Back-end du développement web, préférence qui n'a cessé d'accroitre lors de mon apprentissage de
+                    Symfony. Il était donc évident pour moi de me spécialiser dans le côté back. Cependant, j'essaye
+                    également de m'intéresser aux technologies Front-End, comme React et Vue.js.</p>
                 <div style="display:flex;justify-content: center;margin-bottom: 30px;">
                     <a target="_blank"
                         style="text-decoration:none;display:block;background-color:rgb(0, 0, 0,0.7);padding: 15px;border-radius: 15px;width:180px;font-weight: bold;"
@@ -48,7 +47,7 @@
             <header style="text-align: center;" class="major">
                 <h2>Portfolio</h2>
                 <p>Vous trouverez ci-dessous différents projets que j'ai réalisé durant mon apprentissage du
-                    developpement web, et également ceux que je réalise actuellement</p>
+                    développement web, et également ceux que je réalise actuellement.</p>
             </header>
         </div>
         <section class="spotlight">
@@ -98,7 +97,7 @@
             <div class="content">
                 <h2>Oldix</h2>
                 <p>Projet en équipe</p>
-                <p>Application centralisant des films libres de droits et permettant de les visionner</p>
+                <p>Application centralisant des films libres de droits et permettant de les visionner.</p>
                 <p>Travail uniquement sur le coté back</p>
                 <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
                     <li class="language">
@@ -123,7 +122,7 @@
             <div class="image"><img style="display:block" src="/assets/css/images/quiver.png" width="100%" alt=""></div>
             <div class="content">
                 <h2>Quiver</h2>
-                <p>Clone de Quora, un forum pour poser et repondre à des questions.</p>
+                <p>Clone de Quora, un forum pour poser et répondre à des questions.</p>
                 <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
                     <li class="language">
                         <img src="/assets/css/images/languages/symfony.svg" alt="">
@@ -187,7 +186,7 @@
             <div class="image"><img src="/assets/css/images/pomodoro.png" alt="" /></div>
             <div class="content">
                 <h2>Pomodoro-timer</h2>
-                <p>Application de minuteur permettant d'appliquer la méthode POMODORO, une methode permettant
+                <p>Application de minuteur permettant d'appliquer la méthode POMODORO, une méthode permettant
                     d'optimiser la concentration et la productivité.</p>
                 <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
                     <li class="language">
@@ -216,7 +215,7 @@
     <section id="three" class="wrapper style3 special">
         <div class="inner">
             <header class="major">
-                <h2>Competences</h2>
+                <h2>Compétences</h2>
             </header>
             <ul class="features">
                 <li style="width:100% " class="icon solid fa-code">
