Add logos for remind me project and add links

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,8 +53,7 @@
         <section class="spotlight">
             <div class="image"><img width="100%" src="/assets/css/images/remindme.png" alt="" /></div>
             <div class="content">
-                <h2>Remind-Me</h2>
-                <h4>Projet en cours</h4>
+                <h2>Remind Me</h2>
                 <p>Application "Pense-bête" pour se constituer une liste de films à voir, livres à lire et musique à
                     écouter.</p>
                 <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
