Remove spacetrip project

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -149,7 +149,7 @@
                 </div>
             </div>
         </section>
-        <section class="spotlight">
+        <!-- <section class="spotlight">
             <div class="image"><img src="/assets/css/images/spacetrip.png" alt="" /></div>
             <div class="content">
                 <h2>Spacetrip</h2>
@@ -180,7 +180,7 @@
                     <a target="_blank" href="/spacetrip">Voir plus</a>
                 </div>
             </div>
-        </section>
+        </section> -->
         <section class="spotlight">
             <div class="image"><img src="/assets/css/images/pomodoro.png" alt="" /></div>
             <div class="content">
