--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -51,7 +51,9 @@
             </header>
         </div>
         <section class="spotlight">
-            <div class="image"><img width="100%" src="/assets/css/images/remindme.png" alt="" /></div>
+            <div class="image projectDirectLinks"><a
+                    href="https://alexandreravichandran.github.io/Remind-Me-frontend"><img width="100%"
+                        src="/assets/css/images/remindme.png" alt="" /></a></div>
             <div class="content">
                 <h2>Remind Me</h2>
                 <p>Application "Pense-bête" pour se constituer une liste de films à voir, livres à lire et musique à
@@ -92,7 +94,8 @@
             </div>
         </section>
         <section class="spotlight">
-            <div class="image"><img width="100%" src="/assets/css/images/oldix.png" alt="" /></div>
+            <div class="image projectDirectLinks"><a href="http://oldix.surge.sh/"><img width="100%"
+                        src="/assets/css/images/oldix.png" alt="" /></a></div>
             <div class="content">
                 <h2>Oldix</h2>
                 <p>Projet en équipe</p>
@@ -118,7 +121,8 @@
             </div>
         </section>
         <section class="spotlight">
-            <div class="image"><img style="display:block" src="/assets/css/images/quiver.png" width="100%" alt=""></div>
+            <div class="image projectDirectLinks"><a href="https://app-quiver.herokuapp.com/"><img style="display:block"
+                        src="/assets/css/images/quiver.png" width="100%" alt=""></a></div>
             <div class="content">
                 <h2>Quiver</h2>
                 <p>Clone de Quora, un forum pour poser et répondre à des questions.</p>
@@ -150,7 +154,7 @@
             </div>
         </section>
         <!-- <section class="spotlight">
-            <div class="image"><img src="/assets/css/images/spacetrip.png" alt="" /></div>
+            <div class="image projectDirectLinks"><a href="https://spacetrip-app.herokuapp.com/"><img src="/assets/css/images/spacetrip.png" alt="" /></a></div>
             <div class="content">
                 <h2>Spacetrip</h2>
                 <p>Agence fictive de voyages dans l'espace.</p>
@@ -182,7 +186,9 @@
             </div>
         </section> -->
         <section class="spotlight">
-            <div class="image"><img src="/assets/css/images/pomodoro.png" alt="" /></div>
+            <div class="image projectDirectLinks"><a href="https://pomodoro--timer.herokuapp.com/"> <img
+                        src="/assets/css/images/pomodoro.png" alt="" /></a>
+            </div>
             <div class="content">
                 <h2>Pomodoro-timer</h2>
                 <p>Application de minuteur permettant d'appliquer la méthode POMODORO, une méthode permettant
@@ -253,6 +259,10 @@
                         <div class="language">
                             <img src="/assets/css/images/languages/jekyll.svg" alt="">
                             <p>Jekyll</p>
+                        </div>
+                        <div class="language">
+                            <img src="/assets/css/images/languages/sass.svg" alt="">
+                            <p>Sass</p>
                         </div>
                     </div>
 
@@ -427,4 +437,4 @@
         </div>
     </section>
 
-{% include footer.html %}
+    {% include footer.html %}
