--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -153,7 +153,7 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="spotlight">
+        <section class="spotlight">
             <div class="image projectDirectLinks"><a href="https://spacetrip-app.herokuapp.com/"><img src="/assets/css/images/spacetrip.png" alt="" /></a></div>
             <div class="content">
                 <h2>Spacetrip</h2>
@@ -184,7 +184,7 @@
                     <a target="_blank" href="/spacetrip">Voir plus</a>
                 </div>
             </div>
-        </section> -->
+        </section>
         <section class="spotlight">
             <div class="image projectDirectLinks"><a href="https://pomodoro--timer.herokuapp.com/"> <img
                         src="/assets/css/images/pomodoro.png" alt="" /></a>
